--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "express": "^4.16.4",
     "loadash": "^1.0.0",
     "lodash": "^4.17.11",
     "mongodb": "^3.1.13",
