--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "MIT",
   "dependencies": {
     "express": "^4.16.4",
+    "httprequestor": "git+https://github.com/PANDYA21/httprequestor.git",
     "loadash": "^1.0.0",
     "lodash": "^4.17.11",
     "mongodb": "^3.1.13",
