--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "lodash": "^4.17.11",
     "mongodb": "^3.1.13",
     "node-schedule": "^1.3.1"
+  },
+  "devDependencies": {
+    "nodemon": "^1.18.10"
   }
 }
