--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "CronJobs für MongoDB Pipeline",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "develop": "nodemon server.js",
+    "start": "node server.js"
   },
   "author": "",
   "license": "MIT",
