--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "loadash": "^1.0.0",
     "lodash": "^4.17.11",
     "mongodb": "^3.1.13",
+    "morgan": "^1.9.1",
     "node-schedule": "^1.3.1"
   },
   "devDependencies": {
